--- a/styles/style.css
+++ b/styles/style.css
@@ -122,7 +122,7 @@ main{
 }
 
 #home section.nome-sobrenome{
-    background-image: url('../components/img/Circulo.png');
+    background-image: url('../components/forms/Circulo.png');
     background-size: 300px;
     background-repeat: no-repeat;
     background-position: center;
@@ -178,6 +178,12 @@ main{
 
     border-radius: 15px;
 }
+#home button#linkedin:hover{
+    transition: 0.3s ease-in-out;
+    background-color: var(--corAmarelo);
+    color: var(--corCinzaEscuro);
+}
+
 #home button#linkedin a{
     padding: 6px 60px;
 }
@@ -185,17 +191,21 @@ main{
 #home button#outras-redes{
     color: var(--corAmarelo);
     background-color: var(--corBranco);
-    text-decoration: underline;
-    font-size: 1.4em;
 
+    font-size: 1.4em;
     padding: 10px;
     margin-bottom: 40px;
 }
 
+#home button#outras-redes:hover{
+    transition: 0.5s ease-in-out;
+    text-decoration: underline;
+}
 
 #home picture{
     display: contents;
 }
+
 #home picture img{
     width: 400px;
     padding-top: 30px;
@@ -203,6 +213,7 @@ main{
     
     min-height: 550px;
 }
+
 
 
 
@@ -266,10 +277,13 @@ main{
 }
 
 #meus-projetos picture img.thumbnail{
-    border: 0.3em solid var(--corAmarelo);
     height: 200px;
+    border: 0.4em solid var(--corAmarelo);
 }
 
+#meus-projetos picture img.thumbnail:hover{
+    cursor: pointer;
+}
 
 
 /* ESTILOS HABILIDADES */
@@ -299,11 +313,29 @@ main{
     row-gap: 1em;
     align-content: space-between;
     padding-bottom: 100px;
+    padding-right: 50px;
+    
 }
 
 #habilidades picture img.icons{
     border-radius: 20px;
     height: 150px;
+    padding: 15px;
+
+    background-blend-mode: color;
+    background-color: var(--corCinzaEscuro);
+}
+
+#habilidades picture img.icons:hover{
+    cursor: pointer;
+    
+
+    background-color: var(--corAmarelo);
+    transition: 0.5s ease-in-out;
+
+    position: relative;
+    padding: 5px;
+
 }
 
 /* ESTILOS RODAPÉ */
